--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.5.0"
   }
 }
